   - stevesk@cvs.openbsd.org 2006/07/02 22:45:59
     [groupaccess.c groupaccess.h includes.h session.c sftp-common.c sshpty.c]
     move #include <grp.h> out of includes.h
     (portable needed uidswap.c too)
   - stevesk@cvs.openbsd.org 2006/07/02 23:01:55
     [clientloop.c ssh.1]
     use -KR[bind_address:]port here; ok djm@

20060706
 - (dtucker) [configure.ac] Try AIX blibpath test in different order when
   compiling with gcc.  gcc 4.1.x will accept (but ignore) -b flags so
   configure would not select the correct libpath linker flags.
 - (dtucker) [INSTALL] A bit more info on autoconf.

20060705
 - (dtucker) [ssh-rand-helper.c] Don't exit if mkdir fails because the
   target already exists.

20060630
 - (dtucker) [openbsd-compat/openbsd-compat.h] SNPRINTF_CONST for snprintf
   declaration too.  Patch from russ at sludge.net.
 - (dtucker) [openbsd-compat/getrrsetbyname.c] Undef _res before defining it,
   prevents warnings on platforms where _res is in the system headers.
 - (dtucker) [INSTALL] Bug #1202: Note when autoconf is required and which
   version.

20060627
 - (dtucker) [configure.ac] Bug #1203: Add missing '[', which causes problems
   with autoconf 2.60.  Patch from vapier at gentoo.org.

20060625
 - (dtucker) [channels.c serverloop.c] Apply the bug #1102 workaround to ptys
   only, otherwise sshd can hang exiting non-interactive sessions.

20060624
 - (dtucker) [configure.ac] Bug #1193: Define PASSWD_NEEDS_USERNAME on Solaris.
   Works around limitation in Solaris' passwd program for changing passwords
   where the username is longer than 8 characters.  ok djm@
 - (dtucker) [serverloop.c] Get ifdef/ifndef the right way around for the bug
   #1102 workaround.

20060623
 - (dtucker) [README.platform configure.ac openbsd-compat/port-tun.c] Add
   tunnel support for Mac OS X/Darwin via a third-party tun driver.  Patch
   from reyk@, tested by anil@
 - (dtucker) [channels.c configure.ac serverloop.c] Bug #1102: Around AIX